--- a/backend/Dockerfile.admin.prod
+++ b/backend/Dockerfile.admin.prod
@@ -6,7 +6,7 @@ ENV NODE_ENV=production
 ENV NODE_OPTIONS=--openssl-legacy-provider
 
 #   Copy medusa package.json and yarn.lock from 
-COPY ./package.json ./package-lock.json .
+COPY ./package*.json .
 COPY ./yarn.lock? .
 
 RUN yarn install --frozen-lockfile
