--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,31 +1,31 @@
-#Dependencies
+### Dependencies ###
 FROM node:18-alpine3.16 as deps
 WORKDIR /app/
 
-#   Copy medusa package.json and yarn.lock from /backend
+# Copy medusa package.json and yarn.lock from /backend
 COPY ./package*.json .
 COPY ./yarn.lock? .
 
-#   Install deps
+# Install deps
 RUN yarn install --frozen-lockfile
 
-#Build
+### Build ###
 FROM node:18-alpine3.16 as builder
 WORKDIR /app
 
-#   Copy cached node_modules from deps
+# Copy cached node_modules from deps
 COPY --from=deps /app/node_modules /app/node_modules
 
-#   Install python and medusa-cli
+# Install python and medusa-cli
 RUN apk update
 RUN apk add python3
 RUN yarn global add @medusajs/medusa-cli@latest
 
-#   Copy app source code
+# Copy app source code
 COPY . /app
 
 # Rebuild admin
 RUN yarn build:admin
 
-#   Image entrypoint develop
+# Image entrypoint develop
 ENTRYPOINT ["/bin/sh", "./develop.sh", "develop"]
