--- a/backend/Dockerfile.admin.prod
+++ b/backend/Dockerfile.admin.prod
@@ -1,28 +1,34 @@
+### Build ###
 FROM node:18-alpine3.16 as builder
-
 WORKDIR /app
 
 ENV NODE_ENV=production
 ENV NODE_OPTIONS=--openssl-legacy-provider
 
-#   Copy medusa package.json and yarn.lock from 
+# Copy medusa package.json and yarn.lock from /backend
 COPY ./package*.json .
 COPY ./yarn.lock? .
 
+# Install deps
 RUN yarn install --frozen-lockfile
 
-COPY . .
+# Copy app source code
+COPY . /app
 
 RUN yarn build:admin:prod
 
+### Runner ###
 FROM nginx:1.16.0-alpine as runner
 
+# Copy nginx.conf from /backend
 COPY admin.nginx.conf /etc/nginx/conf.d/default.conf
 
 RUN apk add --no-cache bash
 
 EXPOSE 80 
 
+# Copy static files from Build stage
 COPY --from=builder /app/build /usr/share/nginx/html
 
+# Image entrypoint
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
