--- a/storefront/Dockerfile.prod
+++ b/storefront/Dockerfile.prod
@@ -1,26 +1,26 @@
-#Dependencies
+### Dependencies ###
 FROM node:18-alpine3.16 as deps
-WORKDIR /app/
+WORKDIR /app
 
-#   Copy storefront package.json and yarn.lock from /storefront
+# Copy storefront package.json and yarn.lock from /storefront
 COPY ./package*.json .
 COPY ./yarn.lock? .
 
-#   Install deps and launch patch-package
+# Install deps and launch patch-package
 RUN yarn install --frozen-lockfile
 
-#Build
+### Build ###
 FROM node:18-alpine3.16 as builder
 WORKDIR /app
 
-#   Copy cached root and package node_modules from deps
+# Copy cached root and package node_modules from deps
 COPY --from=deps /app/node_modules /app/node_modules
 
-#   Copy app source code
+# Copy app source code
 COPY . /app
 
-#   Build the app
+# Build the app
 RUN yarn build
 
-#   Run the builded app
+# Run the builded app
 ENTRYPOINT [ "yarn", "start" ]
