--- a/storefront/Dockerfile
+++ b/storefront/Dockerfile
@@ -2,22 +2,25 @@
 FROM node:20-alpine as deps
 WORKDIR /app/
 
-# Copy storefront package package.json and yarn.lock from /storefront
+# Copy storefront package.json and yarn.lock from /storefront
 COPY ./package*.json .
 COPY ./yarn.lock? .
 
-# Install deps
+# Install deps and launch patch-package
 RUN yarn install --frozen-lockfile
 
 ### Build ###
-FROM node:20-alpine as runner
+FROM node:20-alpine as builder
 WORKDIR /app
 
-# Copy cached node_modules from deps
+# Copy cached root and package node_modules from deps
 COPY --from=deps /app/node_modules /app/node_modules
 
 # Copy app source code
 COPY . /app
 
-# Run the storefront in dev mode
-ENTRYPOINT [ "yarn", "dev" ]
+# Build the app
+RUN yarn build
+
+# Run the builded app
+ENTRYPOINT [ "yarn", "start" ]
