--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,6 @@
   "author": "Medusa (https://medusajs.com)",
   "license": "MIT",
   "keywords": [
-    "sqlite",
     "postgres",
     "typescript",
     "ecommerce",
@@ -39,6 +38,7 @@
     "cors": "^2.8.5",
     "dotenv": "16.3.1",
     "express": "^4.17.2",
+    "medusa-cli": "^0.5.5",
     "medusa-fulfillment-manual": "latest",
     "medusa-interfaces": "latest",
     "medusa-payment-manual": "latest",
@@ -54,6 +54,7 @@
     "@stdlib/number-float64-base-normalize": "0.0.8",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
+    "@types/mime": "1.3.5",
     "@types/node": "^17.0.8",
     "babel-preset-medusa-package": "^1.1.19",
     "cross-env": "^7.0.3",
@@ -62,8 +63,7 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^27.0.7",
     "ts-loader": "^9.2.6",
-    "typescript": "^4.5.2",
-    "@types/mime": "1.3.5"
+    "typescript": "^4.5.2"
   },
   "jest": {
     "globals": {
