--- a/storefront/Dockerfile.prod
+++ b/storefront/Dockerfile.prod
@@ -1,5 +1,5 @@
 ### Dependencies ###
-FROM node:20-alpine as deps
+FROM node:20-alpine AS deps
 WORKDIR /app
 
 # Copy storefront package.json and yarn.lock from /storefront
@@ -10,7 +10,7 @@ COPY ./yarn.lock? .
 RUN yarn install --frozen-lockfile
 
 ### Build ###
-FROM node:20-alpine as builder
+FROM node:20-alpine AS builder
 WORKDIR /app
 
 # Copy cached root and package node_modules from deps
@@ -22,5 +22,20 @@ COPY . /app
 # Build the app
 RUN yarn build
 
-# Run the builded app
-ENTRYPOINT [ "yarn", "start" ]
+FROM node:20-alpine AS production
+
+WORKDIR /app
+
+COPY --from=builder /app/public ./public
+COPY --from=builder /app/next.config.js ./
+
+# Set mode "standalone" in file "next.config.js"
+COPY --from=builder /app/.next/standalone ./
+COPY --from=builder /app/.next/static ./.next/static
+
+ENV HOSTNAME=0.0.0.0
+ENV PORT=3000
+
+EXPOSE 3000
+
+CMD ["node", "server.js"]
